added support for java 19