@@ -1,4 +1,4 @@
-FROM azul/zulu-openjdk-alpine:17-latest as build
+FROM azul/zulu-openjdk-alpine:19-latest as build
 WORKDIR /workspace/app
 COPY src src
 COPY gradle gradle
@@ -8,7 +8,7 @@ COPY settings.gradle.kts .
 RUN --mount=type=cache,target=/root/.m2 ./gradlew build --console plain -x test
 RUN mkdir -p build/dependency && (cd build/dependency; jar -xf ../libs/*.jar)
 
-FROM azul/zulu-openjdk-alpine:17-jre-latest
+FROM azul/zulu-openjdk-alpine:19-jre-latest
 VOLUME /app
 ARG DEPENDENCY=/workspace/app/build/dependency
 COPY --from=build ${DEPENDENCY}/BOOT-INF/lib /app/lib
@@ -22,4 +22,4 @@ ENV JAVA_TOOL_OPTIONS "-XX:MaxRAMPercentage=80.0 \
     -Dcom.sun.management.jmxremote.port=1099 \
     -Dcom.sun.management.jmxremote.rmi.port=1099 \
     -Djava.rmi.server.hostname=0.0.0.0"
-ENTRYPOINT ["java", "-cp", "app:app/lib/*", "com.leijendary.spring.template.ApplicationKt"]
+ENTRYPOINT ["java", "--enable-preview", "-cp", "app:app/lib/*", "com.leijendary.spring.template.ApplicationKt"]
